<resources>
    <string name="app_name">Mein Einkaufswagerl</string>
    <string name="noProfileCreated">Sie können keine Einkaufsliste erstellen vor einmaliger Profilerstellung&#8230;</string>
    <string name="noProfileCreated_standOrder">Sie können keinen Dauerauftrag bearbeiten vor einmaliger Profilerstellung&#8230;</string>

    <string name="action_settings">Einstellungen</string>
    <string name="speech_prompt">Sagen Sie was (Menge,Produkt) sie kaufen wollen&#8230;</string>
    <string name="speech_change">Sagen Sie was (Menge,Produkt) sie ändern wollen&#8230;</string>
    <string name="speech_remove">Sagen Sie welche Zeile sie löschen wollen&#8230;</string>
    <string name="speech_index">Sagen Sie welche Zeile sie ändern wollen&#8230;</string>
    <string name="speech_index_missunderstand">Es ist ein Fehler aufgetreten, versuchen Sie es nochmal!</string>
    <string name="speech_arguments_too_short">Es ist ein Fehler aufgetreten, Sie müssen zuerst Menge und danach Produkt sagen!</string>
    <string name="speech_not_supported">Entschuldigung! Ihr Gerät unterstützt die Spracheingabe nicht!</string>
    <string name="tap_on_ear">Drücken Sie auf das Ohr um die Eingabe zu hören</string>
    <string name="tap_on_mouth">Drücken Sie auf den Mund um zu sprechen</string>
    <string name="btn_lebensmittel">Lebensmittel</string>
    <string name="btn_haushalt">Haushalt</string>
    <string name="btn_accept">Zur Einkaufsliste hinzufügen</string>
    <string name="btn_decline">Zurück</string>
    <string name="btn_toList">Zur Einkaufsliste</string>
    <string name="btn_vorlesen">Vorlesen</string>
    <string name="btn_ergaenzen">Ergänzen</string>
    <string name="btn_dauerauftrag">Dauerauftrag</string>
    <string name="btn_absenden">Absenden</string>
    <string name="txt_stueckanzahl">Stückanzahl:</string>
    <string name="btn_delete">Produkt löschen</string>
    <string name="input_vorname">Ihr Vorname:</string>
    <string name="input_nachname">Ihr Nachname:</string>
    <string name="input_strasse">Ihre Straße:</string>
    <string name="input_hausnummer">Ihre Hausnummer:</string>
    <string name="input_plz">Ihre Postleitzahl:</string>
    <string name="btn_weiter">Weiter</string>
    <string name="txt_unvertag">Ihre Unverträglichkeiten:</string>
    <string name="txt_krankheiten">Ihre Krankheiten:</string>

    <string name="explaination_speech">Der Mund Button dient zur Mitteilung von Menge und Produkt, der Ohr Button dient zum Anhören. Der # Button wird zum Löschen einer Zeile verwendet.</string>
    <string name="explaination_speech_full">Sie haben Spracheingabe gewählt. Bei dem Mund Button können Sie mitteilen welche Menge und Produkt Sie kaufen wollen und beim Ohr Button können Sie sich das zuvor Gesprochene anhören. Falls Sie etwas löschen wollen, können Sie mit dem # Button die Zeile angeben, die gelöscht wird. Außerdem können Sie eine einmalige Einkaufsliste oder eine dauerhafte Einkaufsliste erstellen und anfordern.</string>
    <string name="recommendation_person">In diesem Menü können Sie ihr Ernährungsprofil bearbeiten. Zur Einrichtung wird eine zusätzliche Person empfohlen, die bei Problemen helfen kann.</string>
    <string name="product_incompatible_with_user">Sie vertragen dieses Produkt nicht&#8230;</string>
    <string name="product_not_available">Dieses Produkt ist nicht in der App vorhanden, versuchen Sie ein anderes&#8230;</string>

    <string name="home_info_text">Info: Diese App dient zur Aufnahme einer Einkaufsliste, die auf Sie eingeht und einer gemeinwohlnützigen Organisation übermittelt wird.</string>
    <string name="home_info_text_full">Info: Diese App dient zur Aufnahme Ihrer Kaufwünsche in eine Einkaufsliste, die auch auf ihre Intoleranzen und Wünsche eingeht und danach einer gemeinwohlnützigen Organisation übermittelt wird. Die Informationstexte der kommenden Seiten lassen sich mit anklicken vorlesen. \nBitte bei erstmaliger Nutzung Profil anlegen!</string>


    <string name="finished_addStandingOrder">Ihre Liste wurde erfolgreich zu Ihrer dauerhaften Liste hinzugefügt!</string>
    <string name="notfinished_addStandingOrder">Ihre Liste konnte nicht erfolgreich zu Ihrer dauerhaften Liste hinzugefügt werden!</string>

    <string name="finished_replaceStandingOrder">Die dauerhafte Liste konnte erfolgreich mit Ihrer Liste ersetzt werden!</string>
    <string name="notfinished_replaceStandingOrder">Die dauerhafte Liste konnte nicht erfolgreich mit Ihrer Liste ersetzt werden!</string>
    <string name="speech_confirmation">Stimmen Sie den Kauf der Einkaufsliste zu?</string>
    <string name="speech_abort">Der Kaufvorgang wurde abgebrochen!</string>

    <string name="intro_name">Geben Sie ihren Vornamen und Nachnamen mithilfe des jeweiligen Mund Buttons an</string>
    <string name="speech_firstname">Sagen Sie ihren Vornamen&#8230;</string>
    <string name="speech_lastname">Sagen Sie ihren Nachnamen&#8230;</string>
    <string name="speech_defaultcase_name">Sagen Sie ihren Namen&#8230;</string>


    <string name="intro_unvertrag">Geben Sie ihre Intoleranzen mit Hilfe des Ohr und Mund Button an</string>
    <string name="intro_unvertrag_full">Geben Sie ihre Intoleranzen an, indem Sie sich zuerst mit den Ohr Button die jeweilige Intoleranz anhören und dann mithilfe des Mund Buttons bejahen oder verneinen</string>
    <string name="speech_intolerances">Sagen Sie zu der gehörten Intoleranz ja oder nein&#8230;</string>
    <string name="speech_noOwnIntolerances">Sie haben noch keine Intoleranzen angegeben&#8230;</string>

    <string name="intro_diseases">Geben Sie ihre Krankheiten mit Hilfe des Ohr und Mund Buttons an</string>
    <string name="intro_diseases_full">Geben Sie ihre Krankheiten an, indem Sie sich zuerst mit den Ohr Button die jeweilige Krankheit anhören und dann mithilfe des Mund Buttons bejahen oder verneinen</string>
    <string name="speech_diseases">Sagen Sie zu der gehörten Krankheit ja oder nein&#8230;</string>
    <string name="speech_noOwnDiseases">Sie haben noch keine Krankheit angegeben&#8230;</string>

    <string name="intro_extras_full">Sie können zusätzliche Dinge auf die geachtet werden soll mit dem Mund Button angeben und sich mit dem Ohr Button anhören. Mithilfe des # Button können Sie die Zeile angeben und mit dem Schreibblock Button den Inhalt der Zeile ändern.</string>
    <string name="intro_extras">Sie können zusätzliche Dinge auf die geachtet werden soll mit dem Mund Button angeben</string>
    <string name="speech_extra">Sagen Sie auf was zusätzlich (zum Beispiel Bananen) geachtet werden soll&#8230;</string>

    <string name="intro_addressCharity">Geben Sie ihre Adresse mit Hilfe des Mund Button an und beantworten Sie die mit dem Ohr Button jeweilig gehörte Frage. Danach wird Ihnen eine Hilfsorganisation zur Auslieferung zugeordnet.</string>
    <string name="speech_country">Sagen Sie in welchen Land Sie wohnen&#8230;</string>
    <string name="speech_street">Sagen Sie in welcher Straße Sie wohnen&#8230;</string>
    <string name="speech_streetnumber">Sagen Sie ihre Hausnummer&#8230;</string>
    <string name="speech_plz">Sagen Sie welche Postleitzahl sie haben&#8230;</string>
    <string name="speech_noPlz">Entschuldigung! Wiederholen Sie bitte ihre Postleitzahl!</string>

    <string name="speech_profile_finished">Ihr Profil wurde erfolgreich eingerichtet. Die Daten können jederzeit nachträglich geändert werden. Die Bezahlung erfolgt bar beim Empfang der Ware.</string>


    <string name="standing_order_finished">Ihr dauerhafte Liste wurde erfolgreich bearbeitet. Die Daten können jederzeit nachträglich geändert werden.</string>
</resources>
