<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="univie.ac.at.meineinkaufswagerl.shoppinglist.AdjustShoppingListActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_vorlesen"
            android:id="@+id/button"
            android:layout_weight="4"
            android:background="#7dd0e5"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listShoppingFinish"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_ergaenzen"
            android:id="@+id/buttonErgaenzen"
            android:layout_weight="4"
            android:background="#7dd0e5"
            android:layout_marginBottom="3.5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_dauerauftrag"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:background="#7dd0e5"
                android:layout_marginTop="3.5dp"
                android:layout_marginRight="3.5dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btn_absenden"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:background="#7dd0e5"
                android:layout_marginLeft="3.5dp"
                android:layout_marginTop="3.5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
