<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="univie.ac.at.meineinkaufswagerl.profile.ProfileDiseasesManualActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_unvertag"
            android:id="@+id/textView7"
            android:layout_weight="1.5"
            android:textSize="23dp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listUnvertrag"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/txt_krankheiten"
            android:id="@+id/textView8"
            android:layout_weight="1.5"
            android:textSize="23dp"
            android:textStyle="bold" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listDiseases"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_weiter"
            android:id="@+id/buttonContinue"
            android:layout_weight="1.4"
            android:background="#7dd0e5"/>
    </LinearLayout>
</RelativeLayout>
